# magicpoints

./: .gitignore  README.md  app_dbscan_alg.py  main.py  prompt.txt  prompt2.txt  pyproject.toml  requirements.txt  settings.yaml  synthetic_0.ply  synthetic_1.ply  synthetic_2.ply  synthetic_3.ply  synthetic_4.ply  synthetic_5.ply  synthetic_6.ply  synthetic_7.ply  synthetic_labeled_point_cloud.py  tin_command.py  tin_dialog.py
prompts/: prompts.txt
utils/: __init__.py  app_dbscan_alg.py  app_split_by_label.py  synthetic_labeled_point_cloud.py  tin_alg.py
