[project]
name = "magicpoints"
version = "0.1.0"
description = "MagicPoints point-cloud editor and utilities"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8,<4",
    "numpy>=1.24,<3",
    "scipy>=1.13,<2",
    "PyOpenGL>=3.1,<4",
    "PyQt5>=5.15,<6",
    "PyYAML>=6.0,<7",
]

[tool.uv]
package = false
